--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,8 @@
 {
   "npmClient": "yarn",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "useWorkspaces": true,
+  "packages": [
+    "frontend/*"
+  ]
 }
