--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "lerna": "3.15.0",
     "tslint": "^5.17.0",
-    "husky": "^2.4.1"
+    "husky": "^2.4.1",
+    "typescript": "^3.7.2"
   },
   "husky": {
     "hooks": {
