--- a/frontend/auth/package.json
+++ b/frontend/auth/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@frontend/auth",
-  "version": "0.1.0",
-  "license": "MIT",
-  "peerDependencies": {
-    "react": "16.8.6",
-    "react-router-dom": "5.0.0"
-  }
+	"name": "@frontend/auth",
+	"version": "0.1.0",
+	"license": "MIT",
+	"main": "src/index.ts",
+	"peerDependencies": {
+		"react": "16.8.6",
+		"react-router-dom": "5.0.0"
+	}
 }
