--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "test-web",
-  "private": true,
-  "main": "frontend/dashboard/src/index.ts",
-  "scripts": {
-    "gateway:dev": "yarn workspace @backend/gateway dev",
-    "dash:dev": "yarn workspace @frontend/dashboard dev",
-    "typecheck": "lerna run typecheck",
-    "lint": "tslint --project tsconfig.json -c tslint.json -t codeFrame backend/**/*.ts"
-  },
-  "devDependencies": {
-    "lerna": "3.15.0",
-    "tslint": "^5.17.0",
-    "husky": "^2.4.1",
-    "typescript": "^3.7.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "yarn lint && yarn typecheck"
-    }
-  },
-  "workspaces": [
-    "frontend/*"
-  ]
+	"name": "test-web",
+	"private": true,
+	"main": "frontend/dashboard/src/index.ts",
+	"scripts": {
+		"gateway:dev": "yarn workspace @backend/gateway dev",
+		"dash:dev": "yarn workspace @frontend/dashboard dev",
+		"typecheck": "lerna run typecheck",
+		"lint": "tslint --project tsconfig.json -c tslint.json -t codeFrame backend/**/*.ts"
+	},
+	"devDependencies": {
+		"lerna": "3.15.0",
+		"tslint": "^5.17.0",
+		"husky": "^2.4.1",
+		"typescript": "^3.7.2"
+	},
+	"husky": {
+		"hooks": {
+			"pre-push": "yarn lint && yarn typecheck"
+		}
+	},
+	"workspaces": [
+		"frontend/*/**"
+	]
 }
